Revert "Revert "overflow issues""
This reverts commit 2cd2c3979906070ed4c3a9fb1f77fbf213523017.

--- a/styles.css
+++ b/styles.css
@@ -64,8 +64,13 @@ body,html {
 }
 
 
+#searchModal{
+  z-index:3000;
+}
 
-
+#menuModal{
+  z-index: 4000;
+}
 .panel-heading .accordion-toggle:after {
     /* symbol for "opening" panels */
     font-family: 'FontAwesome';  /* essential for enabling glyphicon */
@@ -340,7 +345,7 @@ line-height: 34px
   left: 0px !important;
   right: 0px !important;
   margin: 0 auto;
-  z-index: 1;
+  z-index: 2000;
   text-align: center;
   background-color: #ffffff;
   padding: 10px;
@@ -498,13 +503,30 @@ margin-bottom: 40px;
   color: #333;
 }
 
-#searchmodal{
+#searchModal{
   color: #333;
 }
 
 .bootstrap-datetimepicker-widget{
   color: #333;
 }
+
+body{
+  overflow: hidden;
+
+  position: fixed;
+}
+
+body.modal-open{
+  overflow: hidden;
+  position: fixed;
+}
+
+body.viewport-lg{
+  position: absolute;
+}
+
+
   @media (max-width: 480px){
     .fullscreen .modal-body ul {
       padding: 30px 0 0 0;
